# delta-updates-for-embedded-systems

./: Makefile  README.md  jflashrw.py  pad_patch.py  west.yml
app/: CMakeLists.txt  prj.conf  west.yml
app/src/: Makefile  apply_patch.c  detools.c  detools.h  detools_notes.txt  main.c  main.h  test2.c
app/src/delta/: delta.c  delta.h
app/src/detools/: README.rst  detools.h
scripts/: pad_patch.py  set_current.py
upgrade_app/: CMakeLists.txt  prj.conf
upgrade_app/src/: Makefile  main.c  main.h  test1.c
upgrade_app/src/delta/: delta.c  delta.h
upgrade_app/src/detools/: detools.c
